# pointcloud

./: .gitignore  .install-libght.sh  .travis.yml  README.md
.github/scripts/: postgresql_postgis.sh
.github/workflows/: website.yml
lib/: pc_api.h  pc_api_internal.h  pc_filter.c  pc_patch.c  pc_patch_dimensional.c  pc_patch_uncompressed.c  pc_point.c  pc_util.c
lib/cunit/: cu_pc_patch.c  cu_pc_schema.c
pgsql/: CMakeLists.txt  META.json  Makefile  pc_inout.c  pc_pgsql.c  pointcloud.sql.in
pgsql/expected/: pointcloud.out
pgsql/sql/: pointcloud.sql
pgsql_postgis/: CMakeLists.txt  META.json  Makefile  pointcloud_postgis--1.0.sql  pointcloud_postgis.control  pointcloud_postgis.control.in  pointcloud_postgis.sql.in
